# APinceptbench

./: .env.example  .gitignore  CURRICULUM_STANDARDS.csv  README.md  benchmark_official.py  evaluation_server.py  generate_detailed_report.py  generate_evaluation_report.py  latest_run_failures.json  pyproject.toml  requirements.txt  run7_failures_archive.json  run_full_benchmark.py  run_official_benchmark.py  test_server.py
ap_benchmark/: __init__.py  __main__.py  benchmark.py
ap_benchmark/calibration/: __init__.py  gold_standard.json  validator.py
ap_benchmark/core/: __init__.py  curriculum.py  curriculum_db.py  database.py  evaluator.py  hash.py  models.py  orchestrator.py  pipeline.py  scorer.py
ap_benchmark/docs/: EVALUATION_PROCESS.md
ap_benchmark/hard_fail/: __init__.py  checker.py  rules.py
ap_benchmark/prompts/: __init__.py  article.py  base.py  fill_in.py  match.py  mcq.py  msq.py  official_ap_formatters.py  official_ap_prompts.py
ap_benchmark/tests/: __init__.py  test_benchmark.py
data/: curriculum_relationships.json
docs/: AP_GENERATOR_SPEC.md  AP_QUESTION_TYPES_SPEC.md  CURRICULUM_STANDARDS.md  EVALUATION_API.md  GENERATOR_API_SPEC.md  GENERATOR_INPUTS.md  README.md  SYSTEM_ARCHITECTURE.md
docs/reports/: BENCHMARK_COMPREHENSIVE_REPORT.md  BENCHMARK_FAILURE_REPORT.md  BENCHMARK_RUN2_REPORT.md  BENCHMARK_RUN3_REPORT.md  BENCHMARK_RUN4_REPORT.md  BENCHMARK_RUN5_REPORT.md  BENCHMARK_RUN6_REPORT.md  BENCHMARK_RUN7_REPORT.md  BENCHMARK_RUN8_REPORT.md  evaluation_20260225_081919_0909a798.md
